# mutavive_ray

./: .gitignore  CMakeLists.txt  Makefile
include/: components.h  vec3.h
src/: components.cpp  components.h  main.cpp  vec3.cpp
